Ejercicios Unidad1 Sprint1

--- a/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/01_Workout/01_Markdown_en_Jupyter_I_alumno.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/01_Workout/01_Markdown_en_Jupyter_I_alumno.ipynb
@@ -60,6 +60,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mis primeros pasos con Markdown...\n",
+    "\n",
+    "...son muy buenos"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -89,7 +98,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Cabecera 1\n",
+    "## Cabecera 2\n",
+    "### Cabecera 3"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,11 +112,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Cabecera 1\n",
+    "## Cabecera 2\n",
+    "### Cabecera 3\n",
+    "#### Cabecera 4\n",
+    "##### Cabecera 5\n",
+    "###### Cabecera 6"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -116,7 +134,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<h1>Header 1</h1>\n",
+    "<h2>Header 2</h2>\n",
+    "<h3>Header 3</h3>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -129,7 +151,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "*Cursiva*\n",
+    "\n",
+    "**Negrita**\n",
+    "\n",
+    "***Combinacion negrita cursiva***"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -149,7 +177,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    ">Recuerda la importancia del conocimiento del negocio y del dominio\n",
+    ">>Y utilizar atajos de teclado"
+   ]
   }
  ],
  "metadata": {
