--- a/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/01_Workout/02_Markdown_en_Jupyter_II_alumno.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/01_Workout/02_Markdown_en_Jupyter_II_alumno.ipynb
@@ -29,11 +29,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\"En un lugar de la Mancha\"\n",
+    "\"Veinte años después frente al pelotón de fusilamiento\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -43,11 +44,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\"En un lugar de la Mancha\"  \n",
+    "\"Veinte años después frente al pelotón de fusilamiento\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -60,7 +62,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. Primer elemento\n",
+    "2. Segundo elemento"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -72,7 +77,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "* Primer elemento\n",
+    "* Segundo elemento\n",
+    "* Tercer elemento\n",
+    "* Cuarto elemento"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,7 +95,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "```Python\n",
+    "valor = \"Esto es una variable\"\n",
+    "```"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -93,6 +107,14 @@
    "source": [
     "## 9. Líneas de separación\n",
     "Para separar secciones utilizamos líneas horizontales. Hay varias opciones en markdown para insertar una lína horizontal. En este ejemplo se usa o asteriscos o guiones.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "---"
    ]
   },
   {
@@ -115,7 +137,7 @@
     "[mi_web]: http://www.google.es\n",
     "\n",
     "\n",
-    "Por otro lado, podemos definir links que vayan a otras partes del Notebook, como por ejemplo a una cabecera concreta. Si haces clik en [este enlace](#Markdown-(II)), volverás al inicio del notebook.Con [este otro enlace](#6.-Saltos-de-línea) vas al primer apartado.\n",
+    "Por otro lado, podemos definir links que vayan a otras partes del Notebook, como por ejemplo a una cabecera concreta. Si haces clik en [este enlace](#Markdown-(II)), volverás al inicio del notebook.Con [este otro enlace](#6.-Saltos-de-Línea) vas al primer apartado.\n",
     "\n",
     "¿Cómo linkarlos? Copiamos el nombre de la cabecera, sustituimos espacios por guiones, le añadimos en hashtag al principio, y eso es lo que va dentro de los paréntesis."
    ]
@@ -150,7 +172,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "![error](./error.png)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -162,7 +186,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "![error](./img/crea_celda.png)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -175,7 +201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n"
+    "<img src=\"./img/error.png\" width=200>\n"
    ]
   },
   {
