--- a/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/02_Ejercicios_Workout/01_Ejercicios_Markdown_I.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/02_Ejercicios_Workout/01_Ejercicios_Markdown_I.ipynb
@@ -58,12 +58,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "b3a2fc32",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Ciencia de Datos\n",
+    "## Introducción\n",
+    "### Herramientas"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,12 +81,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "b0fd666e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Markdown**\n",
+    "*Jupyter*\n",
+    "***Python***"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -101,12 +105,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "7aa81d0f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<p><span style=\"background-color:yellow\">resaltado</span> <span style=\"color:blue\">color</span></p>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -122,12 +126,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "97aca4a0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    ">La Ciencia de Datos\n",
+    ">>es el petróleo del \n",
+    ">>>siglo XXI"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -146,11 +152,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "919b170c",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Curso Markdown\n",
+    "\n",
+    "Saber Python es **importante** para la Ciencia de Datos\n",
+    "\n",
+    ">Aprender es crecer\n",
+    "\n",
+    "<p style=\"background-color:green\">*ejemplo*</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73268151",
+   "metadata": {},
    "source": []
   }
  ],
