--- a/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/03_Practica_Obligatoria/18_Practica_Obligatoria_Markdown.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/03_Practica_Obligatoria/18_Practica_Obligatoria_Markdown.ipynb
@@ -58,6 +58,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Aptitudes en Data Science\n",
+    ">**Lo más importante**\n",
+    ">* Matemáticas\n",
+    ">* Python\n",
+    ">* SQL  \n",
+    ">![Python img](./img/python.png)  \n",
+    ">Otro tema muy es la **Estadística**  \n",
+    ">Si tienes dudas, puedes escribirnos a: <ta_ds_online@thebridgeschool.es>  \n",
+    ">Y en esta web se aprede mucho sobre Machine Learning: [Kaggle](https://www.kaggle.com/)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Ejercicio 2  \n",
     "\n",
     "Para este ejercicio vas a crear dos nuevos elementos que no hemos visto en la teoría, tendrás que buscar en internet cómo hacer:\n",
@@ -75,6 +90,68 @@
    "source": [
     "<div style=\"text-align:center\"><img src=\"./img/md_ejercicio_2.png\" /></div>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<body>\n",
+    "    <table align=\"center\">\n",
+    "        <thead>\n",
+    "            <tr>\n",
+    "                <th>Fundamentals</th>\n",
+    "                <th>Data Analysis</th>\n",
+    "                <th>Machine Learning</th>\n",
+    "                <th>Data & Business</th>\n",
+    "            </tr>\n",
+    "        </thead>\n",
+    "        <tbody>\n",
+    "            <tr>\n",
+    "                <td>Jupyter</td>\n",
+    "                <td>SQL</td>\n",
+    "                <td>Supervisado</td>\n",
+    "                <td>API</td>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td>GitHub</td>\n",
+    "                <td>Estadística</td>\n",
+    "                <td>No Supervisado </td>\n",
+    "                <td>Despliegue</td>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td>Python</td>\n",
+    "                <td>EDA</td>\n",
+    "                <td>Deep Learning</td>\n",
+    "                <td>Cloud Computing</td>\n",
+    "            </tr>\n",
+    "        </tbody>\n",
+    "    </table>\n",
+    "</body>\n",
+    "\n",
+    "$$\n",
+    "\\sqrt{3x-1}+(1+x)^2 \n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Fundamentals  | Data Analysis  | Machine Learning  | Data & Business  |\n",
+    "| :------------ | :------------- | :---------------- | :--------------- |\n",
+    "| Jupyter       | SQL            | Supervisado       | API              |\n",
+    "| GitHub        | Estadística    | No Supervisado    | Despliegue       |\n",
+    "| Python        | EDA            | Deep Learning     | Cloud Computing  |\n",
+    "\n",
+    "$$ \n",
+    "\\sqrt{3x-1}+(1+x)^2 \n",
+    "$$                                 \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
