Update Ejercicio obligatorio

--- a/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/03_Practica_Obligatoria/18_Practica_Obligatoria_Markdown.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/03_Practica_Obligatoria/18_Practica_Obligatoria_Markdown.ipynb
@@ -58,14 +58,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Aptitudes en Data Science\n",
+    "### Aptitudes en Data Science\n",
     ">**Lo más importante**\n",
     ">* Matemáticas\n",
     ">* Python\n",
     ">* SQL  \n",
-    ">![Python img](./img/python.png)  \n",
+    ">![Python img](./img/python.png)\n",
+    ">\n",
     ">Otro tema muy es la **Estadística**  \n",
+    ">\n",
     ">Si tienes dudas, puedes escribirnos a: <ta_ds_online@thebridgeschool.es>  \n",
+    ">\n",
     ">Y en esta web se aprede mucho sobre Machine Learning: [Kaggle](https://www.kaggle.com/)  "
    ]
   },
