--- a/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/03_Practica_Obligatoria/18_Practica_Obligatoria_Python_I.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/03_Practica_Obligatoria/18_Practica_Obligatoria_Python_I.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -71,27 +71,31 @@
    "source": [
     "import os\n",
     "\n",
-    "precio_mediana = 9.90\n",
-    "precio_familiar = 8.95\n",
-    "input_correcto = False\n",
+    "precio_mediana = 9.90 # Precio pizza familiar\n",
+    "precio_familiar = 8.95 # Precio pizza mediana\n",
+    "input_correcto = False # Bool para asegurarnos de que el input introducido es correcto\n",
     "\n",
+    "# Loop pedido pizza\n",
     "while(not input_correcto):\n",
-    "    pizz_familiar = input(\"Buenas tardes, bienvenido al servicio de pedido online, el precio de nuestra pizzas es de 8,95 para la familiar o de 9,90 para la mediana ¿Cuántas pizzas familiares desea?\")\n",
+    "    pizz_familiar = input(\"Buenas tardes, bienvenido al servicio de pedido online, el precio de nuestra pizzas es de 8,95 para la familiar \\\n",
+    "                        o de 9,90 para la mediana ¿Cuántas pizzas familiares desea?\")\n",
     "    pizz_mediana = input(\"Estupendo, ¿cuántas pizzas medianas desea?\")\n",
-    "    if pizz_familiar.isdigit() and pizz_mediana.isdigit():\n",
+    "    if pizz_familiar.isdigit() and pizz_mediana.isdigit(): # Checkeamos que el input sea correcto tipo int\n",
     "        input_correcto = True\n",
     "    else:\n",
     "        input(\"La información introducida es incorrecta, vuelva a intentarlo.\\n\\\n",
-    "                Pulse Intro para volver a hacer el pedido...\")\n",
+    "                Pulse Intro para volver a hacer el pedido...\" )# En caso de input incorrecto mostramos mensaje de error\n",
     "        os.system('cls')\n",
-    "        \n",
-    "pizz_familiar = int(pizz_familiar)\n",
+    " \n",
+    "# Convertimos el input en int para poder procesarlo       \n",
+    "pizz_familiar = int(pizz_familiar) \n",
     "pizz_mediana = int(pizz_mediana)\n",
-    "direcc = input(f\"Estupendo, se están preparando {pizz_familiar} pizzas familiares y {pizz_mediana} pizzas medianas. Digame su dirección.\")\n",
+    "direcc = input(f\"Estupendo, se están preparando {pizz_familiar} pizzas familiares \\\n",
+    "    y {pizz_mediana} pizzas medianas. Digame su dirección.\") \n",
     "\n",
     "print(f\"Le mandaremos las {pizz_familiar + pizz_mediana} pizzas a la dirección {direcc}.\\n\\\n",
     "    Serán {(pizz_familiar * precio_familiar) + (pizz_mediana * precio_mediana)}.\\n\\\n",
-    "    Muchas gracias por su pedido.\")\n",
+    "    Muchas gracias por su pedido.\") # Mostramos resumen del pedido\n",
     "\n"
    ]
   },
@@ -118,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -132,12 +136,13 @@
    "source": [
     "import os\n",
     "\n",
-    "input_correcto = False\n",
-    "lista_numeros = []\n",
+    "input_correcto = False # Bool para asegurarnos de que el input introducido es correcto\n",
+    "lista_numeros = [] # Variable para guardar los números introducidos por el usuario\n",
     "\n",
+    "# Loop pedido pizza\n",
     "while(not input_correcto):\n",
     "    numeros_enteros = input(\"Introduzca 3 números enteros separados por comas\")\n",
-    "    lista_numeros = numeros_enteros.split(\",\")\n",
+    "    lista_numeros = numeros_enteros.split(\",\") # Dividimos el input recibido por las comas para generar un lista de números str\n",
     "    if False not in [n.isdigit() for n in lista_numeros] and len(lista_numeros) == 3:\n",
     "        input_correcto = True\n",
     "        lista_numeros = [int(n) for n in lista_numeros]\n",
