--- a/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Listas_revisited.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Listas_revisited.ipynb
@@ -90,11 +90,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enero\n"
+     ]
+    }
+   ],
    "source": [
-    "months = [\"Enero\", \"Febrero\", \"Marzo\"]"
+    "months = [\"Enero\", \"Febrero\", \"Marzo\"]\n",
+    "print(months[0])"
    ]
   },
   {
@@ -106,11 +115,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Marzo\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
-    "months = [\"Enero\", \"Febrero\", \"Marzo\", \"Marzo\"]"
+    "months = [\"Enero\", \"Febrero\", \"Marzo\", \"Marzo\"]\n",
+    "print(months[-2])\n",
+    "print(months.index(\"Febrero\"))"
    ]
   },
   {
@@ -122,11 +142,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[34, 15, 26]\n"
+     ]
+    }
+   ],
    "source": [
-    "degrees = [22, 34, 15, 26, 18, 22]"
+    "degrees = [22, 34, 15, 26, 18, 22]\n",
+    "sub_degrees = degrees[1:4]\n",
+    "print(sub_degrees)"
    ]
   },
   {
@@ -146,7 +176,9 @@
    "outputs": [],
    "source": [
     "# Accediendo mediante el indice\n",
-    "months = [\"Enero\", \"Febrero\", \"Marzo\"]"
+    "months = [\"Enero\", \"Febrero\", \"Marzo\"]\n",
+    "months[1] = \"Abril\"\n",
+    "print(months)"
    ]
   },
   {
@@ -161,21 +193,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['honda', 'yamaha', 'suzuki', 'kawasaki']\n",
+      "['honda', 'yamaha', 'bultaco', 'suzuki', 'kawasaki']\n"
+     ]
+    }
+   ],
    "source": [
     "# Con append lo añadimos al final de la lista\n",
-    "motorcycles = ['honda', 'yamaha', 'suzuki']"
+    "motorcycles = ['honda', 'yamaha', 'suzuki']\n",
+    "motorcycles.append(\"kawasaki\")\n",
+    "print(motorcycles)\n",
+    "motorcycles.insert(2, \"bultaco\")\n",
+    "print(motorcycles)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Es muy comun crear una lista vacia, y a lo largo del programa, ir añadiendo elementos"
+    "# Es muy comun crear una lista vacia, y a lo largo del programa, ir añadiendo elementos\n",
+    "lista_motos = []\n",
+    "lista_motos.append(\"primera_moto\")"
    ]
   },
   {
@@ -192,21 +239,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Seat', 'BMW', 'VW']\n"
+     ]
+    }
+   ],
    "source": [
-    "cars = [\"VW\", \"Seat\", \"BMW\", \"VW\"]"
+    "cars = [\"VW\", \"Seat\", \"BMW\", \"VW\"]\n",
+    "cars.remove(\"VW\")\n",
+    "print(cars)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['VW', 'BMW', 'VW'] Seat\n"
+     ]
+    }
+   ],
    "source": [
     "# Eliminar elementos por indice, y guarda ese valor en una variable\n",
-    "cars = [\"VW\", \"Seat\", \"BMW\", \"VW\"]"
+    "cars = [\"VW\", \"Seat\", \"BMW\", \"VW\"]\n",
+    "eliminado = cars.pop(1)\n",
+    "print(cars, eliminado)"
    ]
   },
   {
@@ -298,7 +365,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -312,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
