--- a/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/03_Practica_Obligatoria/18_Practica_Obligatoria_Colecciones_Funciones.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/03_Practica_Obligatoria/18_Practica_Obligatoria_Colecciones_Funciones.ipynb
@@ -49,8 +49,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_2 = [1,2,3,4,5] # Lista de elementos\n",
+    "ejer_2 = [n**2 for n in ejer_2] # Bucle comprimido que eleva al cuadrado cada elemento\n",
+    "print(ejer_2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -69,8 +81,29 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'un': [0, 7], 'es': [3, 13], 'binario': [2, 15]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_3 = [\"Un\", \"árbol\", \"binario\", \"es\", \"una\", \"estructura\", \"de\", \"un\", \"tipo\", \"particular\", \"a\", \"veces\", \"no\", \"es\", \"ni\", \"binario\"]\n",
+    "\n",
+    "def duplicados(*args, lst_frase):\n",
+    "    resultados = {}\n",
+    "    for dup in args: # recorremos la lista que conforma la frase\n",
+    "        # Por cada elemento de la frase lo comparamos con los elementos que queremos saber si se repiten\n",
+    "        duplicados = [i for i,n in enumerate(lst_frase) if dup.lower() == n.lower()] \n",
+    "        resultados[dup] = duplicados  # Guardamos la palabra que secomo key y los indices como value del diccionario\n",
+    "\n",
+    "    print(resultados)\n",
+    "\n",
+    "duplicados(\"un\", \"es\", \"binario\", lst_frase=ejer_3) # llamada a la función"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -87,8 +120,29 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "(3, 29, 45, 67, 78, 90)\n",
+      "26\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_9 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7)\n",
+    "# Contamos las veces que se repite el n 3\n",
+    "print(ejer_9.count(3))\n",
+    "\n",
+    "# Creamos la tupla nueva desde el indice 5 al 10\n",
+    "tupla1 = ejer_9[5:11]\n",
+    "print(tupla1)\n",
+    "\n",
+    "# Número de elementos de la tupla\n",
+    "print(len(ejer_9))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -102,8 +156,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    # Si no exite el número en la tupla dará una excepción\n",
+    "    print(ejer_9.index(60))\n",
+    "    \n",
+    "    # Devuelve el número de veces que existe el número en la tupla, si devuelve 0, no existe\n",
+    "    print(ejer_9.count(60))\n",
+    "except ValueError as e:\n",
+    "    print(e)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -117,10 +188,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'> [3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7]\n",
+      "<class 'set'> {2, 3, 67, 5, 4, 7, 6, 9, 45, 78, 47, 19, 20, 90, 29}\n",
+      "<class 'dict'> {0: 3, 1: 20, 2: 3, 3: 47, 4: 19, 5: 3, 6: 29, 7: 45, 8: 67, 9: 78, 10: 90, 11: 3, 12: 3, 13: 5, 14: 2, 15: 4, 16: 7, 17: 9, 18: 4, 19: 2, 20: 4, 21: 3, 22: 3, 23: 4, 24: 6, 25: 7}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Coversión a lista\n",
+    "lst_ejer_9 = list(ejer_9)\n",
+    "print(type(lst_ejer_9), lst_ejer_9)\n",
+    "\n",
+    "# Coversión a set\n",
+    "set_ejer_9 = set(ejer_9)\n",
+    "print(type(set_ejer_9), set_ejer_9)\n",
+    "\n",
+    "# Coversión a diccionario\n",
+    "dict_ejer_9 = {i: n for i, n in enumerate(ejer_9)}\n",
+    "print(type(dict_ejer_9), dict_ejer_9)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,10 +226,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 22, 2: 44, 3: 66, 4: 88, 5: 110}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def multiplicación(diccionario, multiplicador):\n",
+    "    diccionario = {index : value * multiplicador for index, value in diccionario.items()}\n",
+    "\n",
+    "    print(diccionario)\n",
+    "\n",
+    "ejer_6 = {1: 11, 2: 22, 3: 33, 4: 44, 5: 55}\n",
+    "\n",
+    "multiplicación(ejer_6, 2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -151,14 +261,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'titulo': 'Cien años de soledad', 'autor': 'Gabriel García Márquez', 'idioma original': 'Español', 'año de publicación': 1967}, {'titulo': '1984', 'autor': 'George Orwell', 'idioma original': 'Inglés', 'año de publicación': 1949}, {'titulo': 'El Principito', 'autor': 'Antoine de Saint-Exupéry', 'idioma original': 'Francés', 'año de publicación': 1943}, {'titulo': 'Orgullo y prejuicio', 'autor': 'Jane Austen', 'idioma original': 'Inglés', 'año de publicación': 1813}]\n"
+     ]
     }
-   },
-   "outputs": [],
-   "source": []
+   ],
+   "source": [
+    "libro1 = {\n",
+    "    \"titulo\": \"Cien años de soledad\",\n",
+    "    \"autor\": \"Gabriel García Márquez\",\n",
+    "    \"idioma original\": \"Español\",\n",
+    "    \"año de publicación\": 1967\n",
+    "}\n",
+    "libro2 = {\n",
+    "    \"titulo\": \"1984\",\n",
+    "    \"autor\": \"George Orwell\",\n",
+    "    \"idioma original\": \"Inglés\",\n",
+    "    \"año de publicación\": 1949\n",
+    "}\n",
+    "\n",
+    "libro3 = {\n",
+    "    \"titulo\": \"El Principito\",\n",
+    "    \"autor\": \"Antoine de Saint-Exupéry\",\n",
+    "    \"idioma original\": \"Francés\",\n",
+    "    \"año de publicación\": 1943\n",
+    "}\n",
+    "\n",
+    "libro4 = {\n",
+    "    \"titulo\": \"Orgullo y prejuicio\",\n",
+    "    \"autor\": \"Jane Austen\",\n",
+    "    \"idioma original\": \"Inglés\",\n",
+    "    \"año de publicación\": 1813\n",
+    "}\n",
+    "libreria = []\n",
+    "\n",
+    "libreria.extend([libro1, libro2, libro3, libro4])\n",
+    "\n",
+    "print(libreria)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -172,8 +318,30 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'titulo': 'Cien años de soledad', 'autor': 'Gabriel García Márquez', 'idioma original': 'Español', 'año de publicación': 1967}, {'titulo': '1984', 'autor': 'George Orwell', 'idioma original': 'Inglés', 'año de publicación': 1949}, {'titulo': 'El Principito', 'autor': 'Antoine de Saint-Exupéry', 'idioma original': 'Francés', 'año de publicación': 1943}, {'titulo': 'Orgullo y prejuicio', 'autor': 'Jane Austen', 'idioma original': 'Inglés', 'año de publicación': 1813}]\n",
+      "[{'titulo': 'Cien años de soledad', 'autor': 'Gabriel García Márquez', 'idioma original': 'esperanto', 'año de publicación': 1967}, {'titulo': '1984', 'autor': 'George Orwell', 'idioma original': 'esperanto', 'año de publicación': 1949}, {'titulo': 'El Principito', 'autor': 'Antoine de Saint-Exupéry', 'idioma original': 'esperanto', 'año de publicación': 1943}, {'titulo': 'Orgullo y prejuicio', 'autor': 'Jane Austen', 'idioma original': 'esperanto', 'año de publicación': 1813}]\n",
+      "[{'titulo': 'Cien años de soledad', 'autor': 'Manuel Ros Martinez', 'idioma original': 'esperanto', 'año de publicación': 1967}, {'titulo': '1984', 'autor': 'Manuel Ros Martinez', 'idioma original': 'esperanto', 'año de publicación': 1949}, {'titulo': 'El Principito', 'autor': 'Manuel Ros Martinez', 'idioma original': 'esperanto', 'año de publicación': 1943}, {'titulo': 'Orgullo y prejuicio', 'autor': 'Manuel Ros Martinez', 'idioma original': 'esperanto', 'año de publicación': 1813}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''Recogemos la lista de diccionarios a modificar\n",
+    "   la clave que queremos modificar\n",
+    "   y el valor que queremos ingresar'''\n",
+    "def mod_dict_list(lst, mod_value, mod):\n",
+    "    return [{**libro, mod_value: mod} for libro in lst]\n",
+    "\n",
+    "print(libreria)\n",
+    "libreria = mod_dict_list(libreria, \"idioma original\", \"esperanto\")\n",
+    "print(libreria)\n",
+    "libreria = mod_dict_list(libreria, \"autor\", \"Manuel Ros Martinez\")\n",
+    "print(libreria)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -186,10 +354,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ese no lo tengo, ¿mola?\n"
+     ]
+    }
+   ],
+   "source": [
+    "def check_libro(titulo):\n",
+    "    for libro in libreria:\n",
+    "        if libro.get(\"titulo\").lower() == titulo.lower():\n",
+    "            return True\n",
+    "    return \"Ese no lo tengo, ¿mola?\"\n",
+    "\n",
+    "libro = check_libro(\"El Princiadapito\")\n",
+    "\n",
+    "print(libro)\n",
+    "        "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -204,7 +391,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ejer_3 = [\"Un\", \"árbol\", \"binario\", \"es\", \"una\", \"estructura\", \"de\", \"un\", \"tipo\", \"particular\", \"a\", \"veces\", \"no\", \"es\", \"ni\", \"binario\"]\n",
+    "\n",
+    "def duplicados(*args, lst_frase):\n",
+    "    resultados = {}\n",
+    "    for dup in args: # recorremos la lista que conforma la frase\n",
+    "        # Por cada elemento de la frase lo comparamos con los elementos que queremos saber si se repiten\n",
+    "        duplicados = [i for i,n in enumerate(lst_frase) if dup.lower() == n.lower()] \n",
+    "        resultados[dup] = duplicados  # Guardamos la palabra que secomo key y los indices como value del diccionario\n",
+    "\n",
+    "    print(resultados)\n",
+    "\n",
+    "duplicados(\"un\", \"es\", \"binario\", lst_frase=ejer_3) # llamada a la función"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -219,7 +419,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def check_libro(libreria, titulo=\"ninguno\"):\n",
+    "    if titulo == \"ninguno\":\n",
+    "        print(\"No se ha proporcionado ningún título\")\n",
+    "    for libro in libreria:\n",
+    "        if libro.get(\"titulo\").lower() == titulo.lower():\n",
+    "            return True\n",
+    "    return \"Ese no lo tengo, ¿mola?\"\n",
+    "\n",
+    "libro = check_libro(\"El Princiadapito\")\n",
+    "\n",
+    "print(libro)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -231,24 +443,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "## Ejercicio 13\n",
-    "Escribe una función que compruebe si un DNI es válido, devolviendo `True` en caso afirmativo.  \n",
-    "En primer lugar, el DNI debe tener entre 7 y 8 dígitos numéricos.  \n",
-    "Para saber si la letra del DNI es correcta puedes utilizar el siguiente fragmento de código:\n",
-    ">```Python\n",
-    ">DNI= 55555555\n",
-    ">palabra='TRWAGMYFPDXBNJZSQVHLCKE'\n",
-    ">print('La letra del DNI es: ', palabra[DNI%23])\n",
-    ">````\n"
+    "email = input(\"Introduce tu dirección de email\")\n",
+    "\n",
+    "def check_email(email):\n",
+    "    if \"@\" in email:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "check = check_email(email)\n",
+    "\n",
+    "print(check)"
    ]
   },
   {
@@ -261,7 +478,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -275,7 +492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
