--- a/01_Programacion_Basica/Sprint_01/Unidad_03_Flujos_de_Control/03_Live_Session/01_Flujos_de_Control_if_for.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_03_Flujos_de_Control/03_Live_Session/01_Flujos_de_Control_if_for.ipynb
@@ -75,9 +75,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Comienza iteración con 4\n",
+      "El numero 4 es un entero\n",
+      "Finaliza iteración con 4\n",
+      "Comienza iteración con 6\n",
+      "El numero 6 es un entero\n",
+      "Finaliza iteración con 6\n",
+      "Comienza iteración con 4.0\n",
+      "Finaliza iteración con 4.0\n",
+      "Comienza iteración con 3.0\n",
+      "Finaliza iteración con 3.0\n",
+      "Finaliza celda\n"
+     ]
+    }
+   ],
    "source": [
     "numeros = [4, 6, 4.0, 3.0]\n",
     "\n",
@@ -105,10 +123,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre alineado a la derecha:                 Ana\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Nombre alineado a la derecha:{\"Ana\":>20}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -186,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +502,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -488,7 +516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
