--- a/01_Programacion_Basica/Sprint_01/Unidad_03_Flujos_de_Control/03_Live_Session/02_Flujos_de_Control_while_try.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_03_Flujos_de_Control/03_Live_Session/02_Flujos_de_Control_while_try.ipynb
@@ -294,12 +294,51 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "No has acertado el número, te quedan 4 vidas\n",
+      "Has probado con los siguientes números: [1]\n",
+      "No has acertado el número, te quedan 3 vidas\n",
+      "Has probado con los siguientes números: [1, 2]\n",
+      "No has acertado el número, te quedan 2 vidas\n",
+      "Has probado con los siguientes números: [1, 2, 3]\n",
+      "No has acertado el número, te quedan 1 vidas\n",
+      "Has probado con los siguientes números: [1, 2, 3, 4]\n",
+      "Has ganado, enhorabuena!\n",
+      "Te has quedado sin vida, ¡Gracias por jugar!, Numero de vidas: 1\n"
+     ]
+    }
+   ],
    "source": [
     "from random import randint\n",
     "\n",
     "# Genera un numero aleatorio del 1 al 5\n",
-    "random_number = randint(1, 5)"
+    "random_number = randint(1, 5)\n",
+    "print(random_number)\n",
+    "vidas = 5\n",
+    "intentos = []\n",
+    "\n",
+    "while vidas > 0:\n",
+    "    numero_usuario = input(\"Introduce un número entre el 1 y el 5 incluidos\")\n",
+    "    if numero_usuario.isdigit() and int(numero_usuario) in range(1,6):\n",
+    "        if int(numero_usuario) == random_number:\n",
+    "            break\n",
+    "        else:\n",
+    "            vidas -= 1\n",
+    "            print(f\"No has acertado el número, te quedan {vidas} vidas\")\n",
+    "        intentos.append(int(numero_usuario))\n",
+    "        print(f\"Has probado con los siguientes números: {intentos}\")\n",
+    "    else:\n",
+    "        print(\"Has introducido un valor erroneo o fuera de rango, ¡Vuelve a intentarlo!\")\n",
+    "\n",
+    "if vidas > 0:\n",
+    "    print(\"Has ganado, enhorabuena!\")\n",
+    "else:\n",
+    "    print(f\"Te has quedado sin vidas, ¡Gracias por jugar!, Numero de vidas: {vidas}\")"
    ]
   },
   {
@@ -310,7 +349,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -324,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
