--- a/01_Programacion_Basica/Sprint_01/Unidad_03_Flujos_de_Control/04_Ejercicios_Extra/03_Ejercicios_Extra_Bucles_if_for.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_03_Flujos_de_Control/04_Ejercicios_Extra/03_Ejercicios_Extra_Bucles_if_for.ipynb
@@ -53,10 +53,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Audi', 'Renault', 'BMW']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_1 = [\"VW\", \"Audi\", \"Renault\", \"VW\", \"BMW\"]\n",
+    "\n",
+    "ejer_1 = [n for n in ejer_1 if n != \"VW\"]\n",
+    "\n",
+    "print(ejer_1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,10 +81,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Audi', 'Renault', 'BMW']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_1 = [\"VW\", \"Audi\", \"Renault\", \"VW\", \"BMW\"]\n",
+    "lista_nueva = []\n",
+    "\n",
+    "lista_nueva = [n for n in ejer_1 if n != \"VW\"]\n",
+    "# [lista_nueva.append(n) for n in ejer_1 if n != \"VW\"]\n",
+    "\n",
+    "print(lista_nueva)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,10 +111,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['VW', 'Audi', 'Renault', 'VW', 'BMW']\n",
+      "['Audi', 'Renault', 'BMW']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_1 = [\"VW\", \"Audi\", \"Renault\", \"VW\", \"BMW\"]\n",
+    "lista_nueva = []\n",
+    "print(ejer_1)\n",
+    "\n",
+    "while(\"VW\" in ejer_1):\n",
+    "    ejer_1.remove(\"VW\")\n",
+    "\n",
+    "print(ejer_1)\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,10 +145,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0, -1, -2, -3, -4, -5, -6, -7, -8, -9, "
+     ]
+    }
+   ],
+   "source": [
+    "x = range(10,-10)\n",
+    "for n in range(10,-10, -1):\n",
+    "    print(n, end=\", \")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -112,9 +173,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = \"En un lugar de La Mancha, de cuyo nombre no quiero acordarme\"\n",
+    "\n",
+    "print(string.count(\"m\") + string.count(\"M\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
@@ -129,13 +207,32 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1, 2, 5, 6, 7, 8, 10, "
+     ]
+    }
+   ],
+   "source": [
+    "for n in range(1, 11, 1):\n",
+    "    if n != 3 and n != 4 and n != 9:\n",
+    "        print(n, end=\", \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -149,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
