--- a/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/00_Ejercicios_Warmup/00_wup2_Ejercicio_While.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/00_Ejercicios_Warmup/00_wup2_Ejercicio_While.ipynb
@@ -90,6 +90,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fuerza: 5\n",
+      "Fuerza Actual: 6\n",
+      "Fuerza Actual: 7\n",
+      "Fuerza Actual: 8\n",
+      "Fuerza Actual: 9\n",
+      "Fuerza Actual: 10\n",
+      "Demasiada Fuerza: 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "fuerza = 5\n",
+    "print(f\"Fuerza: {fuerza}\")\n",
+    "while fuerza < 10:\n",
+    "    fuerza += 1\n",
+    "    print(f\"Fuerza Actual: {fuerza}\")\n",
+    "\n",
+    "print(f\"Demasiada Fuerza: {fuerza}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -98,7 +127,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -112,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
