--- a/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Diccionarios.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Diccionarios.ipynb
@@ -61,10 +61,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'color': 'Rojo', 'marca': 'Tesla', 'modelo': 'Cybertruck', 'peso': 3500, 'cambio automatico': True}\n"
+     ]
+    }
+   ],
+   "source": [
+    "coche_dict = {\n",
+    "    \"color\": \"Rojo\",\n",
+    "    \"marca\": \"Tesla\",\n",
+    "    \"modelo\": \"Cybertruck\",\n",
+    "    \"peso\": 3500,\n",
+    "    \"cambio automatico\": True\n",
+    "}\n",
+    "\n",
+    "print(coche_dict)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -86,10 +104,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['rojo', 'gris']\n",
+      "3500\n",
+      "{'color': ['rojo', 'gris'], 'marca': 'Tesla', 'modelo': 'Cybertruck', 'peso': 3500, 'cambio automatico': True}\n",
+      "{'color': ['rojo', 'gris'], 'marca': 'Tesla', 'modelo': 'Cybertruck', 'peso': 3500, 'cambio automatico': True, 'puertas': 6}\n",
+      "{'color': ['rojo', 'gris'], 'marca': 'Tesla', 'modelo': 'Cybertruck', 'peso': 3500, 'cambio automatico': True}\n",
+      "dict_keys(['color', 'marca', 'modelo', 'peso', 'cambio automatico'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Acceso\n",
+    "print(coche_dict[\"color\"])\n",
+    "print(coche_dict[\"peso\"])\n",
+    "\n",
+    "coche_dict[\"color\"] = [\"rojo\", \"gris\"]\n",
+    "\n",
+    "print(coche_dict)\n",
+    "\n",
+    "coche_dict[\"puertas\"] = 6\n",
+    "\n",
+    "print(coche_dict)\n",
+    "\n",
+    "del coche_dict[\"puertas\"]\n",
+    "\n",
+    "print(coche_dict)\n",
+    "\n",
+    "print(coche_dict.keys())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -162,10 +211,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "color\n",
+      "['rojo', 'gris']\n",
+      "marca\n",
+      "Tesla\n",
+      "modelo\n",
+      "Cybertruck\n",
+      "peso\n",
+      "3500\n",
+      "cambio automatico\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in coche_dict:\n",
+    "    print(i)\n",
+    "    print(coche_dict[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "color : ['rojo', 'gris']\n",
+      "marca : Tesla\n",
+      "modelo : Cybertruck\n",
+      "peso : 3500\n",
+      "cambio automatico : True\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in coche_dict:\n",
+    "    print(i,\":\",coche_dict[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "color : ['rojo', 'gris']\n",
+      "marca : Tesla\n",
+      "modelo : Cybertruck\n",
+      "peso : 3500\n",
+      "cambio automatico : True\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, value in coche_dict.items():\n",
+    "    print(key,\":\",value)"
+   ]
   },
   {
    "cell_type": "code",
@@ -177,7 +291,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -191,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
