--- a/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Funciones_de_usuario_I.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Funciones_de_usuario_I.ipynb
@@ -102,7 +102,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Vamos a crear un conversor de km a millas"
+    "# Vamos a crear un conversor de km a millas\n",
+    "def conversor_km_millas(kilometros):\n",
+    "    millas = 0.62 * kilometros\n",
+    "    return round(millas, 1)"
    ]
   },
   {
@@ -114,10 +117,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1373.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "millas = conversor_km_millas(2215)\n",
+    "\n",
+    "print(millas)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -128,10 +143,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "def que_hora_es():\n",
+    "    now = datetime.now().time()\n",
+    "    return now"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "09:05:38.661847\n"
+     ]
+    }
+   ],
+   "source": [
+    "hora = que_hora_es()\n",
+    "\n",
+    "print(hora)"
+   ]
   },
   {
    "cell_type": "code",
@@ -143,7 +183,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -157,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
