--- a/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Sets.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Sets.ipynb
@@ -60,10 +60,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'azul', 'rojo', 'naranja', 'verde'} <class 'set'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "colores = {\"azul\", \"rojo\", \"verde\", \"naranja\", \"azul\", \"verde\"}\n",
+    "\n",
+    "print(colores, type(colores))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -74,10 +86,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'azul', 'celeste', 'verde', 'rojo', 'burdeos', 'magenta'}\n",
+      "{'azul', 'celeste', 'verde', 'rojo', 'naranja', 'burdeos', 'magenta'}\n",
+      "{'azul', 'celeste', 'verde', 'rojo', 'burdeos', 'magenta'}\n",
+      "azul\n",
+      "celeste\n",
+      "verde\n",
+      "rojo\n",
+      "burdeos\n",
+      "magenta\n"
+     ]
+    }
+   ],
+   "source": [
+    "colores.add(\"magenta\")\n",
+    "print(colores)\n",
+    "\n",
+    "colores.update([\"celeste\", \"burdeos\", \"naranja\"])\n",
+    "print(colores)\n",
+    "\n",
+    "colores.remove(\"naranja\")\n",
+    "print(colores)\n",
+    "\n",
+    "for color in colores:\n",
+    "    print(color)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -90,13 +130,58 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set1 = {1,2,4,4,2,1,1,2}\n",
+    "set2 = {1,2,4}\n",
+    "set1 == set2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[100, 10, 23, 23, 15, 32, 45, 10, 100, 23]\n",
+      "[32, 100, 10, 45, 15, 23]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista_con = [100,10,23,23,15,32,45,10,100,23]\n",
+    "print(lista_con)\n",
+    "# print(set(lista_con))\n",
+    "# print(list(set(lista_con)))\n",
+    "lista_con = list(set(lista_con))\n",
+    "print(lista_con)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -110,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
