--- a/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Tuplas.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Tuplas.ipynb
@@ -57,8 +57,38 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 'texto') <class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "tupla_ejemplo = (3, \"texto\")\n",
+    "print(tupla_ejemplo, type(tupla_ejemplo))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "texto\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tupla_ejemplo[0])\n",
+    "print(tupla_ejemplo[1])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -69,10 +99,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24 <class 'int'>\n",
+      "(24,) <class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "mala_tupla = (24)\n",
+    "print(mala_tupla, type(mala_tupla))\n",
+    "buen_tupla = (24,)\n",
+    "print(buen_tupla, type(buen_tupla))"
+   ]
   },
   {
    "cell_type": "code",
@@ -144,7 +188,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -158,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
