--- a/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/02_Ejercicios_Workout/10_Ejercicio_Python_Basics_II_1.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/02_Ejercicios_Workout/10_Ejercicio_Python_Basics_II_1.ipynb
@@ -87,9 +87,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Carlos\n",
+      "['Inmaculada', 'Maria']\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista_invitados = [\"Maria\", \"Carlos\", \"Inmaculada\"]\n",
+    "lista_invitados.sort()\n",
+    "print(lista_invitados[0])\n",
+    "invitado = lista_invitados.remove(\"Carlos\")\n",
+    "print(lista_invitados)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c']\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
@@ -130,10 +160,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(24, 45, 23, 56)\n",
+      "(45, 23)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tupla = (24,)\n",
+    "tupla1 = (45, 23, 56)\n",
+    "tupla += tupla1\n",
+    "print(tupla)\n",
+    "tupla2 = (tupla1[0], tupla1[1])\n",
+    "print(tupla2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -168,10 +214,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista_num = [1, 2, 3, 4, 5, 6]\n",
+    "lista_num.reverse()\n",
+    "print(lista_num)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -204,10 +262,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cien cañones por banda\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_4 = (\"cien\", \"cañones\", \"por\", \"banda\")\n",
+    "resultado = \" \".join(ejer_4)\n",
+    "print(resultado)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -238,10 +308,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20, 47, 19, 29, 0, 67, 78, 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_5 = [20, 47, 19, 29, 45, 67, 78, 90]\n",
+    "\n",
+    "value = ejer_5.index(45)\n",
+    "\n",
+    "ejer_5[value] = 0\n",
+    "\n",
+    "print(ejer_5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -273,10 +359,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_6 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3)\n",
+    "\n",
+    "element = ejer_6[-3]\n",
+    "\n",
+    "print(element)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -309,6 +409,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20, 47, 19, 29, 45, 67, 78, 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_7 = [3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3]\n",
+    "ejer_7 = [x for x in ejer_7 if x != 3]\n",
+    "print(ejer_7)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -317,7 +436,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -331,7 +450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
