--- a/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/02_Ejercicios_Workout/11_Ejercicio_Python_Basics_II_2.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/02_Ejercicios_Workout/11_Ejercicio_Python_Basics_II_2.ipynb
@@ -79,10 +79,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'x': 3, 'y': 2, 'z': 1} <class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_1 = [(\"x\", 1), (\"x\", 2), (\"x\", 3), (\"y\", 1), (\"y\", 2), (\"z\", 1)]\n",
+    "dict1 = dict(ejer_1)\n",
+    "print(dict1, type(dict1))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -118,10 +130,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 5, 8]\n",
+      "[8, 5, 4, 2]\n",
+      "{4: 78, 2: 98, 8: 234, 5: 29, 1: 23}\n",
+      "98\n",
+      "4 : 78\n",
+      "2 : 98\n",
+      "8 : 234\n",
+      "5 : 29\n",
+      "1 : 23\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_2 = {4:78, 2:98, 8:234, 5:29}\n",
+    "lst = [key for key, value in ejer_2.items()]\n",
+    "lst.sort()\n",
+    "print(lst)\n",
+    "\n",
+    "lst.sort(reverse = True)\n",
+    "print(lst)\n",
+    "\n",
+    "ejer_2[1] = 23\n",
+    "\n",
+    "print(ejer_2)\n",
+    "\n",
+    "print(ejer_2.get(2))\n",
+    "\n",
+    "for key, value in ejer_2.items():\n",
+    "    print(key,\":\", value)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -158,10 +203,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 11, 2: 22, 3: 33, 4: 44}\n",
+      "{1: 11, 2: 22, 3: 33, 4: 44}\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_3_1 = {1: 11, 2: 22}\n",
+    "ejer_3_2 = {3: 33, 4: 44}\n",
+    "\n",
+    "for key, value in ejer_3_2.items():\n",
+    "    ejer_3_1[key] = value\n",
+    "    \n",
+    "print(ejer_3_1)\n",
+    "\n",
+    "ejer_3_1.update(ejer_3_2)\n",
+    "\n",
+    "print(ejer_3_1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -195,10 +261,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 21}\n",
+      "{1, 2, 3, 5, 6, 7, 8, 9, 10, 11, 21}\n",
+      "{1, 2, 3, 5, 6, 7, 8, 9, 11, 21}\n"
+     ]
+    }
+   ],
+   "source": [
+    "set1 = {1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11,21}\n",
+    "set1.add(4)\n",
+    "print(set1)\n",
+    "set1.remove(4)\n",
+    "print(set1)\n",
+    "set1.discard(10)\n",
+    "print(set1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -229,10 +313,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11, 22, 33, 44, 55]\n",
+      "165\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_5 = {1: 11, 2: 22, 3: 33, 4: 44, 5: 55}\n",
+    "values_sum =  [values for values in ejer_5.values()]\n",
+    "print(values_sum)\n",
+    "print(sum(values_sum))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -265,6 +363,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[True, 2, 3, 4.5, 'quizás', ('esto', 'es'), 11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_6 = [11, 2, 4.5, [\"esto\", \"es\"], 3, 4.5, [\"esto\",\"es\"], \"quizás\", True, True, 11]\n",
+    "for i, n in enumerate(ejer_6):\n",
+    "    if type(n) == list:\n",
+    "        ejer_6[i] = tuple(ejer_6[i])\n",
+    "ejer_6 = list(set(ejer_6))\n",
+    "print(ejer_6)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -273,7 +393,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -287,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
