--- a/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/02_Ejercicios_Workout/12_Ejercicio_Python_Basics_II_3.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/02_Ejercicios_Workout/12_Ejercicio_Python_Basics_II_3.ipynb
@@ -76,10 +76,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lunes\n",
+      "Viernes\n",
+      "Número inválido\n"
+     ]
+    }
+   ],
+   "source": [
+    "def dia_semana(numero):\n",
+    "    dias = {\n",
+    "        1: \"Lunes\",\n",
+    "        2: \"Martes\",\n",
+    "        3: \"Miércoles\",\n",
+    "        4: \"Jueves\",\n",
+    "        5: \"Viernes\",\n",
+    "        6: \"Sábado\",\n",
+    "        7: \"Domingo\"\n",
+    "    }\n",
+    "    return dias.get(numero, \"Número inválido\")\n",
+    "\n",
+    "print(dia_semana(1))  # Lunes\n",
+    "print(dia_semana(5))  # Viernes\n",
+    "print(dia_semana(8))  # Número inválido"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -117,29 +143,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 4 3 2 1 \n",
-      "4 3 2 1 \n",
-      "3 2 1 \n",
-      "2 1 \n",
-      "1 \n"
+      "654321\n",
+      "54321\n",
+      "4321\n",
+      "321\n",
+      "21\n",
+      "1\n",
+      "8 7 6 5 4 3 2 1\n",
+      "7 6 5 4 3 2 1\n",
+      "6 5 4 3 2 1\n",
+      "5 4 3 2 1\n",
+      "4 3 2 1\n",
+      "3 2 1\n",
+      "2 1\n",
+      "1\n"
      ]
     }
    ],
    "source": [
-    "n = 5\n",
-    "k = 5\n",
+    "def piramide(n):\n",
+    "   lst = list(range(1,n+1))\n",
+    "   lst.sort(reverse=True)\n",
+    "   while len(lst) > 0:\n",
+    "      for i in lst:\n",
+    "         print(i, end=\"\")\n",
+    "      print()\n",
+    "      lst.pop(0)\n",
+    "      \n",
+    "def piramide2(n):\n",
+    "    for i in range(n, 0, -1):\n",
+    "        print(*range(i, 0, -1))\n",
     "\n",
-    "for i in range(0, n):\n",
-    "    for j in range(k -i, 0, -1):\n",
-    "       print(j, end =\" \")\n",
-    "    print()"
+    "piramide(6)\n",
+    "piramide2(8)"
    ]
   },
   {
@@ -170,10 +213,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def compare(n1, n2):\n",
+    "    if n1 == n2:\n",
+    "        return print(\"Iguales\")\n",
+    "    if n1 > n2:\n",
+    "        print(\"n1 > n2\")\n",
+    "    if n1 < n2:\n",
+    "        print(\"n2 > n1\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -205,8 +256,33 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bucle: 0.36358213424682617 segundos\n",
+      "Count: 0.003000974655151367 segundos\n"
+     ]
+    }
+   ],
+   "source": [
+    "def contador_letras(palabra, letra):\n",
+    "    palabra = palabra.lower()\n",
+    "    letra = letra.lower()\n",
+    "    cont_letra = 0\n",
+    "    for n in palabra:\n",
+    "        if letra == n:\n",
+    "            cont_letra += 1\n",
+    "    return cont_letra\n",
+    "\n",
+    "contador_letras(\"ahora\", \"a\")\n",
+    "\n",
+    "def contador_letras2(palabra, letra):\n",
+    "    return palabra.lower().count(letra.lower())\n",
+    "\n",
+    "contador_letras2(\"ahora\", \"a\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -236,10 +312,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'k': 1, 'a': 2, 'u': 1, 'j': 1, 'f': 2, 'h': 1, 'n': 1, 's': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def convert_to_dict(palabra):\n",
+    "    dct = {}\n",
+    "    for n in palabra:\n",
+    "        if n in dct:\n",
+    "            dct[n] += 1\n",
+    "        else:\n",
+    "            dct[n] = 1\n",
+    "    return dct\n",
+    "\n",
+    "dct = convert_to_dict(\"kaujfhnasf\")\n",
+    "\n",
+    "print(dct)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -270,6 +367,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fsafasf asfasjijf kasjfikasnf\n"
+     ]
+    }
+   ],
+   "source": [
+    "def palabras(*args):\n",
+    "    print(*args)\n",
+    "palabras(\"fsafasf\", \"asfasjijf\", \"kasjfikasnf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -278,7 +394,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -292,7 +408,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
