--- a/01_Programacion_Basica/Sprint_02/Unidad_02_Python_III_Modulos_OOP/02_Ejercicios_Workout/07_Ejercicios_Programacion_Orientada_Objetos.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_02_Python_III_Modulos_OOP/02_Ejercicios_Workout/07_Ejercicios_Programacion_Orientada_Objetos.ipynb
@@ -66,6 +66,72 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "class Perro:\n",
+    "    # Atributos de clase\n",
+    "    patas = 4\n",
+    "    orejas = 2\n",
+    "    ojos = 2\n",
+    "    \n",
+    "    # Atributos de instancia\n",
+    "    def __init__(self, raza_perro, pelo_perro=\"Marrón\", dueño_perro=\"\", velocidad_perro=0):\n",
+    "        self.raza = raza_perro\n",
+    "        self.pelo = pelo_perro\n",
+    "        self.dueño = dueño_perro\n",
+    "        self.velocidad = velocidad_perro\n",
+    "        pass\n",
+    "    \n",
+    "    # Metodo andar, sumamos la velocidad\n",
+    "    def andar(self, aumento_velocidad):\n",
+    "        self.velocidad += aumento_velocidad\n",
+    "    \n",
+    "    # Metodo parar, asignamos la velocidad a 0\n",
+    "    def parar(self):\n",
+    "        self.velocidad = 0\n",
+    "    \n",
+    "    # Metodo ladrar, devolvemos el ladrido en str\n",
+    "    def ladrar(self, entrada):\n",
+    "        return f\"GUAU {entrada}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dogo\n",
+      "Marrón\n",
+      "\n",
+      "0\n",
+      "10\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "perro1 = Perro(\"Dogo\")\n",
+    "print(perro1.raza)\n",
+    "print(perro1.pelo)\n",
+    "print(perro1.dueño)\n",
+    "print(perro1.velocidad)\n",
+    "\n",
+    "perro1.andar(10)\n",
+    "print(perro1.velocidad)\n",
+    "\n",
+    "perro1.parar()\n",
+    "print(perro1.velocidad)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -110,12 +176,91 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "class Tienda:\n",
+    "    tipo = \"Electrodomésticos\" # tipo tienda\n",
+    "    abierta = True # Abierta SI/NO\n",
+    "    \n",
+    "    def __init__(self, nombre_tienda, direccion_tienda, num_empleados, ventas_tienda):\n",
+    "        self.nombre = nombre_tienda # Nombre tienda\n",
+    "        self.direccion = direccion_tienda # Dirección tienda\n",
+    "        self.empleados = num_empleados # Número de empleados en la tiensa\n",
+    "        self.ventas = ventas_tienda # Lista de ventas en los últimos tres meses\n",
+    "    \n",
+    "    # Suma el total de ventas\n",
+    "    def suma_ventas(self):\n",
+    "        return sum(self.ventas)\n",
+    "    \n",
+    "    # Media de ventas por empleado\n",
+    "    def media_ventas(self):\n",
+    "        return self.suma_ventas() / self.empleados if self.empleados else 0\n",
+    "    \n",
+    "    # Junta nombre y dirección de la tienda\n",
+    "    def nombre_direccion(self):\n",
+    "        return f\"Nombre: {self.nombre}, Dirección: {self.direccion}.\"\n",
+    "    \n",
+    "    # Ventas del último mes\n",
+    "    def ventas_ultimo_mes(self):\n",
+    "        return self.ventas[-1]\n",
+    "    \n",
+    "    # Proyección de ventas segun cantidad de inversión\n",
+    "    def proyeccion_ventas(self, inversion):\n",
+    "        self.ventas = [v * 1.2 if inversion < 1000 else v * 1.5 for v in self.ventas]\n",
+    "        return self.ventas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "176\n",
+      "11.0\n",
+      "Nombre: tienda1, Dirección: ksdmaasf.\n",
+      "77\n",
+      "293\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "293"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tienda1 = Tienda(\"tienda1\", \"ksdmaasf\", 16, [34,65,77])\n",
+    "tienda2 = Tienda(\"tienda2\", \"ksdmaasf\", 123, [151,655,177])\n",
+    "tienda3 = Tienda(\"tienda3\", \"ksdmaasf\", 5, [14,20,39])\n",
+    "\n",
+    "print(tienda1.suma_ventas())\n",
+    "print(tienda1.media_ventas())\n",
+    "print(tienda1.nombre_direccion())\n",
+    "print(tienda1.ventas_ultimo_mes())\n",
+    "print(tienda1.proyeccion_ventas(1500))\n",
+    "\n",
+    "print(tienda1.ventas_ultimo_mes() + tienda2.ventas_ultimo_mes() + tienda3.ventas_ultimo_mes())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -129,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
