--- a/01_Programacion_Basica/Sprint_02/Unidad_02_Python_III_Modulos_OOP/01_Workout/Atributos.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_02_Python_III_Modulos_OOP/01_Workout/Atributos.ipynb
@@ -48,10 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Coche:\n",
+    "    puertas = 4\n",
+    "    ruedas = 4"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -62,10 +66,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "tesla = Coche()\n",
+    "\n",
+    "print(tesla.puertas)\n",
+    "print(tesla.ruedas)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -76,10 +94,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "mercedes = Coche()\n",
+    "mercedes.puertas = 3\n",
+    "\n",
+    "print(mercedes.puertas)\n",
+    "print(tesla.puertas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "peugeot = Coche()\n",
+    "print(peugeot.puertas)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -111,7 +162,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -125,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
