--- a/01_Programacion_Basica/Sprint_02/Unidad_02_Python_III_Modulos_OOP/01_Workout/Clases.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_02_Python_III_Modulos_OOP/01_Workout/Clases.ipynb
@@ -70,10 +70,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Coche:\n",
+    "    # Atributos y metodos\n",
+    "    pass"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -84,10 +88,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'type'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(Coche))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -108,10 +122,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class '__main__.Coche'>\n",
+      "<__main__.Coche object at 0x00000204AC437B90>\n"
+     ]
+    }
+   ],
+   "source": [
+    "primer_coche = Coche()\n",
+    "print(type(primer_coche))\n",
+    "print(primer_coche)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -124,10 +151,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "citroen = Coche()\n",
+    "peugeot = Coche()\n",
+    "\n",
+    "print(citroen == peugeot)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -146,7 +186,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -160,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
