--- a/01_Programacion_Basica/Sprint_02/Unidad_02_Python_III_Modulos_OOP/01_Workout/Constructores.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_02_Python_III_Modulos_OOP/01_Workout/Constructores.ipynb
@@ -55,7 +55,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Coche:\n",
+    "    puertas = 4\n",
+    "    ruedas = 4\n",
+    "    \n",
+    "    def __init__(self, marca_coche,):\n",
+    "        self.marca = marca_coche"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -68,10 +75,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Coche.__init__() missing 1 required positional argument: 'marca_coche'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m tesla = \u001b[43mCoche\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mTypeError\u001b[39m: Coche.__init__() missing 1 required positional argument: 'marca_coche'"
+     ]
+    }
+   ],
+   "source": [
+    "tesla = Coche()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tesla\n"
+     ]
+    }
+   ],
+   "source": [
+    "tesla = Coche(\"Tesla\")\n",
+    "print(tesla.marca)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -82,10 +121,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mercedes\n",
+      "renault\n",
+      "4\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "mercedes = Coche(\"mercedes\")\n",
+    "renault = Coche(\"renault\")\n",
+    "print(mercedes.marca)\n",
+    "print(renault.marca)\n",
+    "print(mercedes.puertas)\n",
+    "print(renault.puertas)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,7 +156,86 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Coche:\n",
+    "    puertas = 4\n",
+    "    ruedas = 4\n",
+    "    \n",
+    "    def __init__(self, marca_coche, num_puertas):\n",
+    "        self.marca = marca_coche\n",
+    "        self.puertas = num_puertas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tesla\n"
+     ]
+    }
+   ],
+   "source": [
+    "tesla = Coche(\"Tesla\", 6)\n",
+    "mercedes = Coche(\"mercedes\", 8)\n",
+    "print(tesla.marca)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tesla.puertas)\n",
+    "print(mercedes.puertas)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Coche:\n",
+    "\n",
+    "    def __init__(self, marca_coche, num_puertas = 4, num_ruedas = 4):\n",
+    "        self.marca = marca_coche\n",
+    "        self.puertas = num_puertas\n",
+    "        self.ruedas = num_ruedas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "tesla_4 = Coche(\"Tesla\")\n",
+    "tesla_6r = Coche(\"Tesla\", num_ruedas = 6)\n",
+    "print(tesla_6r.ruedas)"
+   ]
   },
   {
    "cell_type": "code",
@@ -111,7 +247,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -125,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
