--- a/01_Programacion_Basica/Sprint_02/Unidad_02_Python_III_Modulos_OOP/01_Workout/Ejemplo_practico_OOP.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_02_Python_III_Modulos_OOP/01_Workout/Ejemplo_practico_OOP.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,9 +92,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Buscamos '1984'\n",
+      "{'titulo': '1984', 'autor': 'George Orwell'}\n",
+      "\n",
+      "Mostramos la biblioteca\n",
+      "1984\n",
+      "George Orwell\n",
+      "****\n",
+      "Brave New World\n",
+      "Aldous Huxley\n",
+      "****\n",
+      "\n",
+      "Eliminamos '1984'\n",
+      "Mostramos como queda la biblioteca\n",
+      "Brave New World\n",
+      "Aldous Huxley\n",
+      "****\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Ejemplo de Uso\n",
@@ -130,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,9 +204,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Buscamos 1984:\n",
+      "Titulo: 1984\n",
+      "Autor: George Orwell\n",
+      " \n",
+      "Mostramos la biblioteca\n",
+      "Titulo: 1984\n",
+      "Autor: George Orwell\n",
+      "Titulo: Brave New World\n",
+      "Autor: Aldous Huxley\n",
+      "\n",
+      "Eliminamos 1984\n",
+      "Titulo: Brave New World\n",
+      "Autor: Aldous Huxley\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Ejemplo de Uso\n",
@@ -281,7 +324,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -295,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
