--- a/01_Programacion_Basica/Sprint_02/Unidad_02_Python_III_Modulos_OOP/01_Workout/Metodos.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_02_Python_III_Modulos_OOP/01_Workout/Metodos.ipynb
@@ -48,24 +48,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Coche:\n",
     "    ruedas = 4\n",
     "\n",
-    "    def __init__(self, marcha_coche, num_puertas = 4):\n",
-    "        self.marca = marcha_coches\n",
-    "        self.puertas = num_puertas"
+    "    def __init__(self, marca_coche, num_puertas = 4):\n",
+    "        self.marca = marca_coche\n",
+    "        self.puertas = num_puertas\n",
+    "    \n",
+    "    def caracteristicas(self):\n",
+    "        return f\"Marca {self.marca}, puertas {str(self.puertas)}\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Marca Ford, puertas 4'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ford_ka = Coche(\"Ford\")\n",
+    "ford_ka.caracteristicas()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -76,10 +93,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Coche:\n",
+    "    ruedas = 4\n",
+    "\n",
+    "    def __init__(self, marca_coche, precio_coche, num_puertas = 4):\n",
+    "        self.marca = marca_coche\n",
+    "        self.puertas = num_puertas\n",
+    "        self.precio = precio_coche\n",
+    "    \n",
+    "    def caracteristicas(self):\n",
+    "        return f\"Marca {self.marca}, puertas {str(self.puertas)}\"\n",
+    "    \n",
+    "    def precio_actual(self, años):\n",
+    "        if años < 5:\n",
+    "            return self.precio * 0.7\n",
+    "        elif años > 5 and años < 10:\n",
+    "            return self.precio * 0.5\n",
+    "        else:\n",
+    "            return self.precio * 0.3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17500.0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jeep_cherokee = Coche(\"Jeep\", 35000)\n",
+    "jeep_cherokee.precio_actual(8)"
+   ]
   },
   {
    "cell_type": "code",
@@ -91,7 +148,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -105,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
