--- a/01_Programacion_Basica/Sprint_02/Unidad_02_Python_III_Modulos_OOP/03_Practica_Obligatoria/18_Practica_Obligatoria_OOP.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_02_Python_III_Modulos_OOP/03_Practica_Obligatoria/18_Practica_Obligatoria_OOP.ipynb
@@ -97,32 +97,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "class User:\n",
+    "    def __init__(self, nombre_usuario, saldo_inicial, checking_account):\n",
+    "\n",
+    "        if not isinstance(nombre_usuario, str):\n",
+    "            raise TypeError(\"El nombre debe ser una cadena de texto.\")\n",
+    "        if isinstance(saldo_inicial, float):\n",
+    "            saldo_inicial = int(saldo_inicial)\n",
+    "        if not isinstance(saldo_inicial, int):\n",
+    "            raise TypeError(\"El saldo inicial debe ser un entero.\")\n",
+    "        if saldo_inicial < 0:\n",
+    "            raise ValueError(\"El saldo inicial no puede ser negativo.\")\n",
+    "        if not isinstance(checking_account, bool):\n",
+    "            raise TypeError(\"checking_account debe ser un valor booleano.\")\n",
+    "\n",
+    "            \n",
+    "        self.nombre = nombre_usuario\n",
+    "        self.saldo = saldo_inicial\n",
+    "        self.checking_account = checking_account\n",
+    "        \n",
+    "    def withdraw(self, dinero):\n",
+    "            if dinero < 0:\n",
+    "                raise ValueError(\"La cantidad no puede ser negativa.\")\n",
+    "            dinero = int(dinero)\n",
+    "            if dinero > self.saldo:\n",
+    "                raise ValueError(\"No puedes retirar más dinero del que tienes.\")\n",
+    "            self.saldo -= dinero\n",
+    "            return f\"{self.nombre} tiene un saldo de {self.saldo}.\"\n",
+    "    \n",
+    "    def deposit(self, dinero):\n",
+    "        if dinero < 0:\n",
+    "            raise ValueError(\"La cantidad no puede ser negativa.\")\n",
+    "        dinero = int(dinero)\n",
+    "        self.saldo += dinero\n",
+    "        return f\"{self.nombre} tiene un saldo de {self.saldo}.\"\n",
+    "    \n",
+    "    def transfer(self, otro_usuario, dinero):\n",
+    "            if dinero < 0:\n",
+    "                raise ValueError(\"La cantidad no puede ser negativa.\")\n",
+    "            dinero = int(dinero)\n",
+    "            if dinero > self.saldo:\n",
+    "                raise ValueError(\"No puedes transferir más dinero del que tienes.\")\n",
+    "            if not otro_usuario.checking_account:\n",
+    "                raise ValueError(f\"{otro_usuario.nombre} no puede recibir transferencias.\")\n",
+    "            \n",
+    "            self.saldo -= dinero\n",
+    "            otro_usuario.saldo += dinero\n",
+    "            return f\"{self.nombre} tiene un saldo de {self.saldo}. {otro_usuario.nombre} tiene un saldo de {otro_usuario.saldo}.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jeff tiene un saldo de 68.\n",
+      "Joe tiene un saldo de 20. Jeff tiene un saldo de 118.\n",
+      "Jeff tiene un saldo de 38. Joe tiene un saldo de 100.\n",
+      "Jeff tiene un saldo de 58.\n"
+     ]
+    }
+   ],
+   "source": [
     "Jeff = User('Jeff', 70, True)\n",
-    "Joe = User('Joe', 70, False)\n",
+    "Joe = User('Joe', 70, True)\n",
     "\n",
-    "Jeff.withdraw(2) # Devuelve 'Jeff tiene un saldo de 68.'\n",
+    "print(Jeff.withdraw(2)) # Devuelve 'Jeff tiene un saldo de 68.'\n",
     "\n",
-    "Joe.transfer(Jeff, 50) # Devuelve 'Joe tiene un saldo de 20 y Jeff tiene un saldo de 118.'\n",
+    "print(Joe.transfer(Jeff, 50)) # Devuelve 'Joe tiene un saldo de 20 y Jeff tiene un saldo de 118.'\n",
     "\n",
-    "Jeff.transfer(Joe, 80) # Lanza un ValueError: Joe no puede recibir transferencias.\n",
+    "print(Jeff.transfer(Joe, 80)) # Lanza un ValueError: Joe no puede recibir transferencias.\n",
     "\n",
     "Joe.checking_account = True # Habilita la cuenta corriente para que Joe pueda recibir transferencias.\n",
     "\n",
-    "Jeff.transfer(Joe, 80) # Devuelve 'Jeff tiene un saldo de 38 y Joe tiene un saldo de 100.'\n",
+    "print(Jeff.transfer(Joe, 80)) # Devuelve 'Jeff tiene un saldo de 38 y Joe tiene un saldo de 100.'\n",
     "\n",
-    "Jeff.transfer(Joe, 100) # Lanza un ValueError: Jeff no tiene suficiente dinero para la transacción.\n",
+    "print(Jeff.transfer(Joe, 100)) # Lanza un ValueError: Jeff no tiene suficiente dinero para la transacción.\n",
     "\n",
-    "Jeff.deposit(20.00) # Devuelve 'Jeff tiene un saldo de 58.'\n"
+    "print(Jeff.deposit(20.00)) # Devuelve 'Jeff tiene un saldo de 58.'\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -136,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
